--- a/app/src/main/res/layout/layout_meal_info.xml
+++ b/app/src/main/res/layout/layout_meal_info.xml
@@ -13,7 +13,7 @@
         android:layout_width="@dimen/small_icon_size"
         android:layout_height="@dimen/small_icon_size"
         android:contentDescription="@string/desc_time_icon"
-        android:src="@drawable/ic_time_fill"
+        android:src="@drawable/ic_time_out"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tint="?colorPrimary" />
@@ -22,7 +22,7 @@
         android:id="@+id/text_view_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dividers_space"
+        android:layout_marginStart="@dimen/padding_small"
         android:text="@string/example_meal_info_time"
         android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
         app:layout_constraintBottom_toBottomOf="@id/icon_time"
@@ -34,9 +34,9 @@
         android:id="@+id/icon_menu"
         android:layout_width="@dimen/small_icon_size"
         android:layout_height="@dimen/small_icon_size"
-        android:layout_marginTop="@dimen/default_items_gap"
+        android:layout_marginTop="@dimen/padding_medium"
         android:contentDescription="@string/desc_menu_icon"
-        android:src="@drawable/ic_time_fill"
+        android:src="@drawable/ic_list_out"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/icon_time"
         app:tint="?colorPrimary" />
@@ -45,7 +45,7 @@
         android:id="@+id/text_view_menu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dividers_space"
+        android:layout_marginStart="@dimen/padding_small"
         android:text="@string/label_meal_info_menu"
         android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
         app:layout_constraintBottom_toBottomOf="@id/icon_menu"
@@ -57,7 +57,7 @@
         android:id="@+id/text_view_menu_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dividers_space"
+        android:layout_marginTop="@dimen/padding_small"
         android:text="@string/example_meal_info_menu_list"
         android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,9 +68,9 @@
         android:id="@+id/icon_caloric"
         android:layout_width="@dimen/small_icon_size"
         android:layout_height="@dimen/small_icon_size"
-        android:layout_marginTop="@dimen/default_items_gap"
+        android:layout_marginTop="@dimen/padding_medium"
         android:contentDescription="@string/desc_caloric_icon"
-        android:src="@drawable/ic_time_fill"
+        android:src="@drawable/ic_oil_out"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_view_menu_list"
         app:tint="?colorPrimary" />
@@ -79,7 +79,7 @@
         android:id="@+id/text_view_caloric"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dividers_space"
+        android:layout_marginStart="@dimen/padding_small"
         android:text="@string/example_meal_info_caloric"
         android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
         app:layout_constraintBottom_toBottomOf="@id/icon_caloric"
@@ -91,9 +91,9 @@
         android:id="@+id/icon_price"
         android:layout_width="@dimen/small_icon_size"
         android:layout_height="@dimen/small_icon_size"
-        android:layout_marginTop="@dimen/default_items_gap"
+        android:layout_marginTop="@dimen/padding_medium"
         android:contentDescription="@string/desc_price_icon"
-        android:src="@drawable/ic_ruble_fill"
+        android:src="@drawable/ic_ruble_out"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/icon_caloric"
         app:tint="?colorPrimary" />
@@ -102,7 +102,7 @@
         android:id="@+id/text_view_price"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dividers_space"
+        android:layout_marginStart="@dimen/padding_small"
         android:text="@string/example_meal_info_price"
         android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
         app:layout_constraintBottom_toBottomOf="@id/icon_price"
