--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,8 +3,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="default_items_gap">16dp</dimen>
-    <dimen name="dividers_space">8dp</dimen>
+    <dimen name="padding_medium">16dp</dimen>
+    <dimen name="padding_small">8dp</dimen>
     <dimen name="card_item_dividers_space">4dp</dimen>
     <dimen name="app_bar_height">72dp</dimen>
     <dimen name="default_padding">24dp</dimen>
